syntax = "proto3";

package io.harness.event.payloads;
import "google/protobuf/timestamp.proto";
option java_multiple_files = true;

message Lifecycle {
  string instance_id = 1;
  enum EventType {
    START = 0;
    STOP = 1;
  }
  EventType type = 2;
  google.protobuf.Timestamp timestamp = 3;
  google.protobuf.Timestamp created_timestamp = 4;
}
